// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All props 1`] = `
<div>
  <select
    autocomplete="none"
    class="tr__form-input-select apptr__input _input-select"
    id="SelectWidgetId"
    name="SelectWidgetId"
    style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
  >
    <option
      value="test1"
    >
      something:test1
    </option>
    <option
      value="test2"
    >
      label for test2
    </option>
    <option
      disabled=""
      value="disabled"
    >
      something:disabled
    </option>
    <optgroup
      label="something:has sub-choices"
    >
      <option
        value="subChoice1"
      >
        something:subChoice1
      </option>
      <option
        value="subChoice2"
      >
        label for subchoice2
      </option>
    </optgroup>
  </select>
</div>
`;

exports[`Default props 1`] = `
<div>
  <select
    autocomplete="none"
    class="tr__form-input-select apptr__input _input-select"
    id="SelectWidgetId"
    name="SelectWidgetId"
    style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
  >
    <option
      value=""
    />
  </select>
</div>
`;

exports[`Disabled 1`] = `
<div>
  <select
    autocomplete="none"
    class="tr__form-input-select apptr__input _input-select"
    disabled=""
    id="SelectWidgetId"
    name="SelectWidgetId"
    style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
  >
    <option
      value=""
    />
  </select>
</div>
`;

exports[`With blank choice 1`] = `
<div>
  <select
    autocomplete="none"
    class="tr__form-input-select apptr__input _input-select"
    id="SelectWidgetId"
    name="SelectWidgetId"
    style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
  >
    <option
      value=""
    />
    <option
      value="test1"
    />
    <option
      value="test2"
    >
      label for test2
    </option>
    <option
      disabled=""
      value="disabled"
    />
    <optgroup
      label=""
    >
      <option
        value="subChoice1"
      />
      <option
        value="subChoice2"
      >
        label for subchoice2
      </option>
    </optgroup>
  </select>
</div>
`;
